--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@ body {
     font-family: "PT Sans", sans-serif !important;
 }
 
-img{
+img {
     cursor: pointer;
 }
 
@@ -19,4 +19,10 @@ img{
     width: 1240px;
     margin: 0 auto;
     padding: 0 20px;
+}
+
+@media screen and (max-width: 1000px) {
+    .my-container {
+        width: 100%;
+    }
 }
